@@ -1688,6 +1688,7 @@ smime/Makefile
 smime/lib/Makefile
 smime/gui/Makefile
 tools/Makefile
+evolution-zip
 evolution-shell.pc
 evolution-plugin.pc
 ])
